--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -14,6 +14,12 @@
     border-color: #2b2b2b;
     box-shadow: 0 0 10px #2b2b2b;
 }
+
+/*Last drop down adds extra space need to move it up a bit when clicked*/
+.Posts:last-child > .postActions > .dropdown{
+    margin-top: -5em;
+}
+
 li{
     list-style-type: none;
 }
