--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -79,6 +79,12 @@
     
 }
 
+.likeNumb{
+    display: inline;
+    position: relative;
+    top: -0.14em;
+}
+
 /*
 .commentsButton:hover{
     background-color: lightcoral;
